Update for theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
               <a href="{{ site.data.org.baseurl }}{{ item.link }}">{{ item.name }}</a>
             </li>
             {% endfor %}
+            <li>{% include theme-toggle.html %}</li>
           </ul>
         </nav>
         <div class="heading__tagline">{{ site.data.org.tagline }}</div>
