--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,12 +1,10 @@
 .page-container {
   display: flex;
   flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
+  margin-inline: auto;
   max-width: var(--large-breakpoint);
   min-height: 100vh;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+  padding-inline: 1.25rem;
 
   // WebKit mobile viewport bug fix
   @supports (-webkit-touch-callout: none) {
@@ -21,12 +19,11 @@ main {
 .border-rule {
   border: none;
   border-top: 1px solid var(--color-primary-info-bg);
-  margin: 1.75rem 0;
+  margin-block: 1.75rem;
 }
 
 .gap-bottom-top-base {
-  margin-bottom: 1.25rem;
-  margin-top: 3rem;
+  margin-block: 3rem 1.25rem;
 }
 
 .page-footer {
