--- a/_sass/_tokens.scss
+++ b/_sass/_tokens.scss
@@ -53,21 +53,21 @@ $large-breakpoint: 36rem;
 
   // dark theme
   --color-dark-shades-primary-text: var(--color-shades-tertiary-bright);
-  --color-dark-primary-info-bg: #3d3d3d;
-  --color-dark-shades-primary-glare: #8494ab;
-  --color-dark-stroke: #2d2d2f;
-
   --color-dark-primary-info: #718eff;
-  --color-dark-syntax-quaternary: #99c192;
-  --color-dark-code-tertiary: #ff89b9;
-  --color-dark-stroke: #555;
+  --color-dark-primary-info-bg: #3d3d3d;
+
   --color-dark-mid-text: #c7caff;
   --color-dark-syntax-primary-glare: #48a3cd;
   --color-dark-mid-bg: #1f2021;
+  --color-dark-shades-primary-glare: #8494ab;
   --color-dark-shades-primary-bright: #202831;
+  --color-dark-shades-light: #2c2c3e;
   --color-dark-state-info-text: #99b5fb;
-
   --color-dark-state-warn-bg: #272114;
   --color-dark-state-warn-text: #ee6e25;
+  --color-dark-code-tertiary: #ff89b9;
+  --color-dark-syntax-quaternary: #99c192;
+
+  --color-dark-stroke: #555;
   --color-dark-token-comment: #b9bac9;
 }
