--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -2,7 +2,7 @@
   column-gap: 2rem;
   display: flex;
   justify-content: center;
-  margin: 3rem 0;
+  margin-block: 3rem;
 
   &__item {
     align-items: center;
