--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,11 +49,10 @@ main {
 
 .scrollToTop {
   --d: 48px;
-  background-color: var(--color-state-info);
+  background-color: var(--color-primary-info);
   border: none;
   border-radius: 50%;
   bottom: 1rem;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3), 0 2px 24px 0 rgba(84, 19, 19, 0.15);
   cursor: pointer;
   height: var(--d);
   opacity: 0;
