--- a/_sass/_tokens.scss
+++ b/_sass/_tokens.scss
@@ -61,7 +61,8 @@ $large-breakpoint: 36rem;
   --color-dark-mid-bg: #1f2021;
   --color-dark-shades-primary-glare: #8494ab;
   --color-dark-shades-primary-bright: #202831;
-  --color-dark-shades-light: #2c2c3e;
+
+  --color-dark-shades-gray: #7b92b2;
   --color-dark-state-info-text: #99b5fb;
   --color-dark-state-warn-bg: #272114;
   --color-dark-state-warn-text: #ee6e25;
