--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -36,15 +36,20 @@
     table {
       tr:nth-child(even) {
         &:has(td) {
-          background-color: var(--color-dark-shades-light);
+          background-color: var(--color-dark-mid-bg);
         }
       }
     }
   }
 
+  // _layout.scss
+  .border-rule {
+    border-top-color: var(--color-dark-shades-gray);
+  }
+
   // _masthead.scss
   .heading__brand {
-    color: #9c9898;
+    color: var(--color-dark-shades-primary-glare);
 
     .header-nav {
       .header-nav__title {
@@ -63,7 +68,7 @@
 
   .page-header__meta .data,
   .post-header__meta .data {
-    color: #7b92b2;
+    color: var(--color-dark-shades-gray);
 
     & > {
       color: var(--color-dark-shades-primary-glare);
@@ -138,7 +143,8 @@
   }
 
   .pill {
-    color: var(--color-dark-shades-primary-text);
+    color: var(--color-dark-shades-gray);
+    border-color: var(--color-dark-shades-gray);
 
     &:focus-visible,
     &:hover {
@@ -204,7 +210,7 @@
     &__item {
       &:focus,
       &:hover {
-        border-color: #7b92b2; // #49494c;
+        border-color: var(--color-dark-shades-gray);
         color: var(--color-dark-shades-primary-text);
       }
     }
@@ -369,15 +375,20 @@ html[data-theme="dark"] {
     table {
       tr:nth-child(even) {
         &:has(td) {
-          background-color: var(--color-dark-shades-light);
+          background-color: var(--color-dark-mid-bg);
         }
       }
     }
   }
 
+  // _layout.scss
+  .border-rule {
+    border-top-color: var(--color-dark-shades-gray);
+  }
+
   // _masthead.scss
   .heading__brand {
-    color: #9c9898;
+    color: var(--color-dark-shades-primary-glare);
 
     .header-nav {
       .header-nav__title {
@@ -396,7 +407,7 @@ html[data-theme="dark"] {
 
   .page-header__meta .data,
   .post-header__meta .data {
-    color: #7b92b2;
+    color: var(--color-dark-shades-gray);
 
     & > {
       color: var(--color-dark-shades-primary-glare);
@@ -469,7 +480,8 @@ html[data-theme="dark"] {
   }
 
   .pill {
-    color: var(--color-dark-shades-primary-text);
+    color: var(--color-dark-shades-gray);
+    border-color: var(--color-dark-shades-gray);
 
     &:focus-visible,
     &:hover {
