--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -68,12 +68,12 @@
 }
 
 code {
-  border-radius: 0.3em;
+  border-radius: 3px;
   box-decoration-break: clone;
   -webkit-box-decoration-break: clone;
   font-size: var(--font-size-small);
   hyphens: none;
-  padding: 0.125em 0.25em;
+  padding: 2px 6px;
   tab-size: 2;
   text-align: left;
   word-break: keep-all;
