--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,5 +1,5 @@
 @mixin text-decoration {
-  text-decoration-color: rgba(43, 40, 93, 0.65);
+  text-decoration-color: oklch(from currentColor l c h / 65%);
   text-decoration-thickness: 0.2rem;
 }
 
