--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -41,7 +41,7 @@ blockquote {
       margin: var(--spacer) 0;
     }
 
-    .note--head {
+    .note-heading {
       font-weight: 600;
       margin-block: 0 0.5rem;
     }
