--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -21,10 +21,16 @@
 <div class="post-header__meta">
 
   {% if page.path contains '_posts' %}
-    <time class="data published" aria-label="Published on {{ page.date | date: '%B %-d, %Y' }}">{{ page.date | date: "%B %-d, %Y" }}</time>
+    <time class="data published" aria-label="Published on {{ page.date | date: '%B %-d, %Y' }}">
+      <span class="long">{{ page.date | date: "%B %-d, %Y" }}</span>
+      <span class="short">{{ page.date | date: "%b %-d, %Y" }}</span>
+    </time>
   {% endif %}
   {% if post.path contains '_posts' %}
-    <time class="data published" aria-label="Published on {{ post.date | date: '%B %-d, %Y' }}">{{ post.date | date: "%B %-d, %Y" }}</time>
+    <time class="data published" aria-label="Published on {{ post.date | date: '%B %-d, %Y' }}">
+      <span class="long">{{ post.date | date: "%B %-d, %Y" }}</span>
+      <span class="short">{{ post.date | date: "%b %-d, %Y" }}</span>
+    </time>
   {% endif %}
 
   <div class="data reading-time">
