--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     padding: 0.75rem;
     text-decoration: none;
-    transition: border-color ease var(--transition-duration);
+    transition: all ease var(--transition-duration);
     width: 50%;
 
     &:focus,
