--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,8 +23,9 @@
   <meta
     name="description"
     content="{% if page.description %}{{ page.description }}{% else %}{{ site.data.org.description }}{% endif %}" />
+  {% if page.noindex %}
   <meta name="robots" content="noindex" />
-  {% if page.date %}
+  {% endif %} {% if page.date %}
   <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
   <meta property="article:author" content="{{ site.data.org.url }}/about/" />
   {% endif %} {% if page.categories %} {% for category in page.categories limit:1 %}
@@ -47,7 +48,7 @@
   <meta property="og:description" content="{{ page.description }}" />
   {% else %}
   <meta property="og:description" content="{{ site.data.org.description }}" />
-  {% endif %} {% if page.noindex %} {% endif %} {% if page.image %}
+  {% endif %} {% if page.image %}
   <meta property="og:image" content="{{ site.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
   {% else %}
   <meta property="og:image" content="{{ site.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
