Update inline code block

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -13,6 +13,10 @@ code {
 
   &:not([class]) {
     white-space: nowrap;
+
+    @media (max-width: $large-breakpoint) {
+      white-space: break-spaces;
+    }
   }
 }
 
